crates/plotnik-lib/tests/02-parser/recovery_unexpected/garbage_inside_node.txt
(a (b) @@@ (c)) (d)
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:8
  |
1 | (a (b) @@@ (c)) (d)
  |        ^
  |
help: expected a child node, or `)` to close

error: unexpected token
 --> query.ptk:1:10
  |
1 | (a (b) @@@ (c)) (d)
  |          ^
  |
help: expected a child node, or `)` to close
